# Site-django-2

./: pyproject.toml
projeto/pro_radio/: db.sqlite3  manage.py
projeto/pro_radio/app_radio/: apps.py  views.py
projeto/pro_radio/app_radio/migrations/: 0001_initial.py  __init__.py
projeto/pro_radio/app_radio/templates/usuarios/: base.html  home.html  usuarios.html
projeto/pro_radio/pro_radio/: asgi.py  settings.py  urls.py  wsgi.py
